@startuml kpi_reporting
title Workload Tracking and KPI Indicators

top to bottom direction

skinparam shadowing false
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #2C5F8A
skinparam classHeaderBackgroundColor #D6E4F0
skinparam packageBackgroundColor #EAF2FF
skinparam packageBorderColor #1F4E79
skinparam packageFontColor #1F4E79
skinparam defaultFontName Helvetica
skinparam defaultFontSize 12
skinparam ArrowColor #444444
skinparam ArrowThickness 1.5
skinparam noteBorderColor #999999
skinparam noteBackgroundColor #FFFDE7
hide circle

class Project {
  - code : String
  - name : String
  - initialBudget : BigDecimal
}

class User {
  - firstName : String
  - lastName : String
}

class PlanCharge {
  - period : LocalDate
  - plannedDays : BigDecimal
}

class ChargeReelle {
  - period : LocalDate
  - actualDays : BigDecimal
  - submittedAt : LocalDateTime
  - validatedAt : LocalDateTime
  --
  + validate() : void
}

class SnapshotKpi {
  - snapshotDate : LocalDate
  - eac : BigDecimal
  - marge : BigDecimal
  - evPct : BigDecimal
  - deliveryPct : BigDecimal
  - deriveJh : BigDecimal
  - caProduction : BigDecimal
  - fae : BigDecimal
  --
  + computeEac() : BigDecimal
}

Project "1" *-- "*" PlanCharge    : planned workload >
PlanCharge "*" --> "1" User       : concerns >
Project "1" *-- "*" ChargeReelle  : actual workload >
ChargeReelle "*" --> "1" User     : concerns >
Project "1" *-- "*" SnapshotKpi   : KPI history >

note right of ChargeReelle
  Manual entry today; a KIMAI-import source discriminator is designed but not yet a persisted column.
end note

note right of SnapshotKpi
  Computed monthly or on every workload change; history kept for trend analysis.
end note

note bottom of SnapshotKpi
  EAC = Estimate At Completion. Margin = (Budget − EAC) / Budget.
end note

@enduml
